# gaggle

./: Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
gaggle/: __init__.py  client.py
tests/: test_client.py  test_retries.py  test_service.py
