[tool.poetry]
name = "gaggle"
version = "0.1.0"
description = "aiohttp wrapper for google-api-client-python"
authors = ["Steinn Eldjarn Sigurdarson <steinnes@gmail.com>"]
keywords = ["google api", "async"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://github.com/steinnes/gaggle"

[tool.poetry.dependencies]
python = "^3.5"
aiohttp = "^3.5.3"
google-api-python-client = "^1.7.7"
google-auth = "^1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
flake8 = "^3.6"
pytest-cov = "^2.6"
codecov = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
